<resources>
    <string name="app_name">Rosa2</string>
    <string name="action_settings">Einstellungen</string>
    <string name="save">Speichern</string>
    <string name="create_new_person">Neue Person erstellen</string>
    <string name="cancel">Abbrechen</string>
    <string name="sure">Sicher</string>
    <string name="almost_sure">Fast sicher</string>
    <string name="unsure">Unsicher</string>
    <string name="name_of_person">Name</string>
    <string name="phonenumber">Telefonnummer</string>
    <string name="email">E-Mail</string>
    <string name="address">Adresse</string>
    <string name="price">Preis</string>
    <string name="notes">Notizen</string>
    <string name="name_must_not_be_empty">Name darf nicht leer sein</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="not_show_any_more">Nicht mehr anzeigen</string>
    <string name="confirm_cancel_dialog_title">Wollen Sie wirklich abbrechen?</string>
    <string name="person_archived">Person archiviert</string>
    <string name="person_deleted">Person gelöscht</string>
    <string name="undo">Rückgängig machen</string>
    <string name="image_of_person">Bild der Person</string>
    <string name="no_person_selected">Keine Person ausgewählt</string>
    <string name="add">Hinzufügen</string>
    <string name="edit">Bearbeiten</string>
    <string name="delete">Löschen</string>
    <string name="archive">Archivieren</string>
    <string name="edit_person">Person bearbeiten</string>
    <string name="confirm_archive_person_title">Wollen Sie die Person wirklich archivieren?</string>
    <string name="confirm_deletion_title">Wollen Sie die ausgewählten Personen wirklich löschen?</string>
    <string name="confirm_unarchiving_title">Wollen Sie die ausgewählten Personen wirklich aktivieren?</string>
    <string name="zeroEuros">0,00 €</string>
    <string name="open_archive">Archiv öffnen</string>
    <string name="the_archive">Archiv</string>
    <string name="final_deletion">Entgültig löschen</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="setting_confirm_deletion_of_persons">Nachfragen beim Löschen</string>
    <string name="settings_confirm_archiving_of_persons">Nachfragen beim Archivieren</string>
    <string name="settings_confirm_activation_of_persons">Nachfragen beim Aktivieren</string>
    <string name="setting_cancel_edit_of_person">Nachfragen beim Abbruch der Bearbeitung</string>
    <string name="person_unarchived">Person aktiviert</string>
    <string name="persons_unarchived">Personen aktiviert</string>
    <string name="persons_deleted">Personen gelöscht</string>

    <string name="eventbus_id">eventbusRosa2Id</string>
    <string name="person_bundle_id">personBundleId</string>
    <string name="num_persons_bundle_id">numberOfPersonsId</string>
    <string name="scroll_state_id_archive_list">scrollStateIdArchiveList</string>
    <string name="scroll_state_id_main_list">scrollStateIdMainList</string>
    <string name="dialog_is_for_deletion_id">dialogIsForDeletionId</string>
    <string name="detail_archive_person_dialog_person_id">detailArchivePersonDialogPersonId</string>

    <string name="edit_dialog_pref">editDialogPref</string>
    <string name="delete_dialog_pref">deleteDialogPref</string>
    <string name="archive_dialog_pref">archiveDialogPref</string>
    <string name="unarchive_dialog_pref">unarchiveDialogPref</string>
    <string name="unarchive">Aktivieren</string>
    <string name="import_data">Import</string>
    <string name="export">Export</string>
    <string name="search">Suche</string>
</resources>
