<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.ArchiveActivity">

    <item
        android:id="@+id/action_archive_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_archive_unarchive"
        android:orderInCategory="100"
        android:title="@string/unarchive"
        android:icon="@drawable/ic_unarchive_white_48px"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_archive_del"
        android:orderInCategory="200"
        android:title="@string/final_deletion"
        android:icon="@drawable/ic_delete_forever_white_24px"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_archive_cancel"
        android:orderInCategory="300"
        android:title="@string/cancel"
        android:icon="@drawable/ic_cross_white_24dp"
        app:showAsAction="ifRoom|withText" />

</menu>