<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.EditActivity">

    <item
        android:id="@+id/action_edit_save"
        android:orderInCategory="100"
        android:title="@string/save"
        android:icon="@drawable/ic_save_white_24dp"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_edit_cancel"
        android:orderInCategory="200"
        android:title="@string/cancel"
        android:icon="@drawable/ic_cross_white_24dp"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_edit_archive"
        android:orderInCategory="300"
        android:title="@string/archive"
        android:visible="false"
        android:icon="@drawable/ic_archive_white_24dp"
        app:showAsAction="ifRoom|withText" />

</menu>