<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/activity_edit_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/activity_edit_picture"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_account_circle_black_24dp"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <EditText
                android:id="@+id/activity_edit_name"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:hint="@string/name_of_person"
                android:drawableStart="@drawable/ic_account_circle_black_24dp"
                android:drawablePadding="5dp"
                android:inputType="textPersonName"
                android:layout_height="60dp"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/activity_edit_phone"
                android:layout_width="match_parent"
                android:hint="@string/phonenumber"
                android:textSize="20sp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_whatsapp_black_24dp"
                android:gravity="center_vertical"
                android:inputType="phone"
                android:layout_height="60dp"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/activity_edit_email"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:hint="@string/email"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:gravity="center_vertical"
                android:inputType="textEmailAddress"
                android:layout_height="60dp"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/activity_edit_address"
                android:layout_width="match_parent"
                android:drawablePadding="5dp"
                android:hint="@string/address"
                android:drawableStart="@drawable/ic_navigation_black_24dp"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:inputType="textPostalAddress"
                android:layout_height="60dp"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/activity_edit_price"
                android:layout_width="match_parent"
                android:drawablePadding="5dp"
                android:hint="@string/price"
                android:drawableStart="@drawable/ic_euro_symbol_black_24px"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:inputType="text"
                android:layout_height="60dp"
                tools:ignore="LabelFor" />

            <RadioGroup
                android:orientation="horizontal"
                android:id="@+id/activity_edit_radiogroup"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sure"
                    android:tag="test"
                    android:id="@+id/radioButtonSure" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/almost_sure"
                    android:id="@+id/radioButtonAlmostSure" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/unsure"
                    android:id="@+id/radioButtonUnsure" />
            </RadioGroup>

            <EditText
                android:id="@+id/activity_edit_misc"
                android:layout_width="match_parent"
                android:hint="@string/notes"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_speaker_notes_black_24dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:inputType="textLongMessage|textMultiLine|textCapSentences|textAutoCorrect"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                tools:ignore="LabelFor" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_edit_fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_save_white_24dp"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="bottom|end"
        app:fabSize="normal"
        app:layout_anchor="@id/activity_edit_misc"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>