<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context="de.davidartmann.android.rosa2.activity.SettingsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:weightSum="1"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_edit_black_24dp"
            android:layout_weight=".8"
            android:gravity="center_vertical"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/setting_cancel_edit_of_person"
            android:layout_height="match_parent"
            android:layout_width="0dp" />

        <Switch
            android:id="@+id/activity_settings_switch_confirm_cancel_edit"
            android:showText="false"
            android:layout_weight=".2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:weightSum="1"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_delete_black_24dp"
            android:layout_weight=".8"
            android:gravity="center_vertical"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/setting_confirm_deletion_of_persons"
            android:layout_height="match_parent"
            android:layout_width="0dp" />

        <Switch
            android:id="@+id/activity_settings_switch_confirm_deletion"
            android:showText="false"
            android:layout_weight=".2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:weightSum="1"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_archive_black_24dp"
            android:layout_weight=".8"
            android:gravity="center_vertical"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/settings_confirm_archiving_of_persons"
            android:layout_height="match_parent"
            android:layout_width="0dp" />

        <Switch
            android:id="@+id/activity_settings_switch_confirm_archiving"
            android:showText="false"
            android:layout_weight=".2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:weightSum="1"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_unarchive_black_48px"
            android:layout_weight=".8"
            android:gravity="center_vertical"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/settings_confirm_activation_of_persons"
            android:layout_height="match_parent"
            android:layout_width="0dp" />

        <Switch
            android:id="@+id/activity_settings_switch_confirm_unarchiving"
            android:showText="false"
            android:layout_weight=".2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
